--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -71,6 +71,10 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
+.right {
+	flex: 1;
+	padding-left: 20px;
+}
 
 /* Basic */
 
@@ -2359,7 +2363,36 @@ input, select, textarea {
 		.icon.alt:active {
 			background-color: rgba(255, 255, 255, 0.2);
 		}
+.gallery {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 10px;
+	margin: 0 -10px;
+}
 
+.gallery img {
+	width: 100%;
+	height: 100%;
+	margin: 10px;
+}
+.container {
+	display: flex;
+	align-items: center;
+}
+
+.container-text {
+	flex: 1;
+	padding-right: 20px;
+}
+
+.container-img {
+	flex: 1;
+}
+
+.image img {
+	max-width: 100%;
+	height: auto;
+}
 /* Image */
 
 	.image {
@@ -2370,7 +2403,7 @@ input, select, textarea {
 	}
 
 		.image img {
-			border-radius: 8px;
+			border-radius: 10px;
 			display: block;
 		}
 
