--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -71,11 +71,19 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
-.right {
-	flex: 1;
-	padding-left: 20px;
+.container {
+	display: flex;
+	width: 100%;
 }
 
+.left {
+	flex: 1;
+	padding-right: 20px;
+}
+
+.right {
+	flex: 1;
+}
 /* Basic */
 
 	@-ms-viewport {
@@ -2375,19 +2383,7 @@ input, select, textarea {
 	height: 100%;
 	margin: 10px;
 }
-.container {
-	display: flex;
-	align-items: center;
-}
 
-.container-text {
-	flex: 1;
-	padding-right: 20px;
-}
-
-.container-img {
-	flex: 1;
-}
 
 .image img {
 	max-width: 100%;
